[gui] fix body scrolling even if not overflow

--- a/gui/css/layout.less
+++ b/gui/css/layout.less
@@ -1,5 +1,6 @@
 body {
 	background-color: @colorBackgroundApp;
+	overflow:hidden;
 }
 
 .header {
